# rnr-kyber-spa

./: README.md
measurement_scripts/: compute_pi.py  compute_snr.py  cw308.py  cwlite.py  intt.fg  intt_input_generator.py  invntt.py  measure.py  nonzero.txt  picoscope6000_sca.py  profiling.py  requirements.txt  sasca_attack.py  stats.py
rnr-kyber/py/nttwrapper/: MANIFEST.in  pyproject.toml
rnr-kyber/py/nttwrapper/src/nttwrapper/: __init__.py  consts.py  intt.py
rnr-kyber/ref/: .gitignore  Makefile  mi_plot.py  ntt.c  ntt.h  reduce.c  reduce.h  test_ntt.c
rnr-kyber/ref/test/: test_mi.c  test_misc.c  test_ntt.c  test_reduce.c
simulated_sasca/: attack.py  consts.py  gen_ntt_conts.py  intt.fg  intt.py  intt_attack.py  intt_mini.fg  intt_small.fg  leakage_models.py  main.py  ntt_sasca.py  plots.py  reduce.py  requirements.txt  stats.py  utils.py
